# obsidian-index-service

./: .example.env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
example-vault/: test-malformed-yaml.md
example-vault/project/: test-note-1.md
obsidian_index_service/: config.py
obsidian_index_service/db/: connection.py  database.py  errors.py  operations.py
obsidian_index_service/file_watcher/: handlers.py  scanner.py  watcher.py
obsidian_index_service/note_processor/: file_utils.py  logging_config.py  note_extractor.py  processor.py
tests/: README.md  conftest.py  test_note_processing.py
tests/features/: note_processing.feature
